# JES

./: .env.development  .gitignore  LOGO_HELP.md  README.md  app.js  docker-compose.yml  fetch_products.js  index.html  main.js  package-lock.json  products_list.json  products_list_utf8.json  styles.css
.entire/: settings.json
jes-core/: Cargo.toml  Dockerfile  error.txt  error2.txt  error3.txt  error4.txt  error5.txt
jes-core/migrations/: 001_media_assets.sql  002_ecommerce_schema.sql  002_user_notifications.sql
jes-core/src/: config.rs  main.rs
jes-core/src/db/: postgres.rs
jes-core/src/models/: media.rs  mod.rs  notification.rs  product.rs  wallet.rs
jes-core/src/routes/: escrow.rs  health.rs  media.rs  mod.rs  notification.rs  payments.rs  products.rs  wallet.rs
jes-core/src/services/: coalescer.rs  coins.rs  jwt.rs  media.rs  mod.rs  notification.rs
jes-realtime/: Dockerfile  mix.exs  scylla_schema.cql
jes-realtime/config/: runtime.exs
jes-vite/: .gitignore  README.md  build_output2.txt  git_path.txt  git_path_utf8.txt  index.html  jsconfig.json  middleware.js  next.config.mjs  package-lock.json  package.json  shopify.app.toml  supabase_rls_policies.sql  supabase_social_tables.sql  tailwind.config.js
jes-vite/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
jes-vite/api/: chat.js
jes-vite/app/: globals.css  layout.js  page.js  providers.js  (+1 more)
(+805 files in other folders)
