[package]
name = "jes-core"
version = "0.1.0"
edition = "2021"
description = "JES Financial Core — Zero-GC transactional engine"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency
dashmap = "5"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"

# Media deduplication
sha2 = "0.10"
hex = "0.4"
img_hash = "3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
bytes = "1"

# AWS S3
aws-config = "1"
aws-sdk-s3 = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
time = { git = 'https://github.com/time-rs/time', tag = 'v0.3.36' }
